# Visual_Inspection

./: .gitignore  Hardware.h  VisualInspection.opensdf  VisualInspection.vcxproj
image_proc_qtc/image_processing/: CMakeLists.txt  main.cpp
x64/NoCamera/: vc120.old.idb
x64/NoCamera/VisualInspection/: VisualInspection.res  vc120.idb
x64/NoCamera/VisualInspection.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog
x64/NoCamera/VisualInspection/VisualInspection.tlog/: CL.read.1.tlog  CL.write.1.tlog  VisualInspection.lastbuildstate  cl.command.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
